--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
+    "sqlite3": "^5.1.7",
     "typeorm": "^0.3.24"
   },
   "devDependencies": {
